--- a/style1.css
+++ b/style1.css
@@ -4,7 +4,9 @@
     }
 
     body{
-
+     background-color:azure
+     font-family: 'Nunito Sans', sans-serif;
+      
     }
    .cabecalho{
     background-color:aqua
